--- a/tictactoe/index.html
+++ b/tictactoe/index.html
@@ -67,7 +67,7 @@
         function createGame(){
             const gameCode = generateGameCode();
 
-            //todo - codes cannot be repeated and have 4 letters
+            //todo - codes cannot be repeated
 
             const gameRef = push(ref(database, "/games"));
             const gameId = gameRef.key;
@@ -94,8 +94,7 @@
                         reject(new Error("Timeout."));
                     }, 5000);
 
-                    get(gamesRef)
-                    .then((snapshot) => {
+                    get(gamesRef).then((snapshot) => {
                         clearTimeout(timeout); //Removal of timeout if the data was downloaded before the time expired
                         const games = snapshot.val();
 
@@ -210,6 +209,21 @@
         }
 
         function checkWinner(board, player, gameRef) {
+
+            let draw = true
+            board.forEach((e) => {
+                if(e != 'X' && e != 'O'){
+                    draw = false;
+                }
+            });
+            if(draw){
+                update(gameRef, {
+                    result: "draw"
+                }).then(()=> {
+                    alert(`Draw`);
+                });
+            }
+
             let result;
             if(board[0] == board[1] && board[1] == board[2] && board[2] != 0){
                 result = board[0];
@@ -254,6 +268,7 @@
                 const randomIndex = Math.floor(Math.random() * characters.length);
                 code += characters.charAt(randomIndex);
             }
+            
             return code;
         }
         const refHTML = {
@@ -272,9 +287,10 @@
             const { gameId, gameCode } = createGame();
 
             refHTML.gameCode.innerHTML = `Code: <span id="codeColor">${gameCode}<span> `;
-            refHTML.copy.innerHTML = `COPY`;
+            refHTML.copy.innerHTML = `<img src="img/copy.svg" alt="copy">`;
             refHTML.copy.addEventListener('click', () => {
                 navigator.clipboard.writeText(gameCode);
+                refHTML.copy.title = "Copied";
             });
             refHTML.menu.style.display = "none";
 
