--- a/tictactoe/index.html
+++ b/tictactoe/index.html
@@ -43,6 +43,8 @@
         </table>
     </div>
 
+    <div id="resultInfo"></div>
+
 
     <script type="module">
 
@@ -220,7 +222,8 @@
                 update(gameRef, {
                     result: "draw"
                 }).then(()=> {
-                    alert(`Draw`);
+                    resultInfo.innerHTML = 'Draw <br><img onClick="window.location.reload();" style="cursor: pointer" src="img/refresh.svg" alt="refresh">';
+                    resultInfo.style.display = "block";
                 });
             }
 
@@ -239,7 +242,7 @@
                 result = board[2];
             }else if(board[0] == board[4] && board[4] == board[8] && board[8] != 0){
                 result = board[0];
-            }else if(board[2] == board[5] && board[4] == board[6] && board[6] != 0){
+            }else if(board[2] == board[4] && board[4] == board[6] && board[6] != 0){
                 result = board[2];
             }
             if(result){
@@ -253,10 +256,11 @@
                         win = 1;
                     }
                     if(win == player){
-                        alert(`Win`);
+                        resultInfo.innerHTML = 'You won! <br><img onClick="window.location.reload();" style="cursor: pointer" src="img/refresh.svg" alt="refresh">';
                     }else{
-                        alert(`Lose`);
+                        resultInfo.innerHTML = 'You lost :( <br><img onClick="window.location.reload();" style="cursor: pointer" src="img/refresh.svg" alt="refresh">';
                     }
+                    resultInfo.style.display = "block";
                 });
             }
         }
@@ -268,7 +272,7 @@
                 const randomIndex = Math.floor(Math.random() * characters.length);
                 code += characters.charAt(randomIndex);
             }
-            
+
             return code;
         }
         const refHTML = {
@@ -280,7 +284,8 @@
             copy: document.querySelector('#copy'),
             game: document.querySelector('#game'),
             board: document.querySelector('#board'),
-            turn: document.querySelector('#turn')
+            turn: document.querySelector('#turn'),
+            resultInfo: document.querySelector('#resultInfo')
         }
 
         refHTML.createGame.addEventListener('click', ()=>{
